--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE= edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +12,34 @@
     <style> @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap'); </style>
 </head>
 <body>
-    
+    <div class="header">
+        <div class="logo"></div>
+        <div class="header-link-container">
+            <ul>
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link two</a></li>
+                <li><a href="">header link three</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="hero-container">
+        <div class="left-hero"></div>
+        <div class="right-hero"></div>
+    </div>
+    <div class="information-container">
+        <div class="info-top">Some random information</div>
+        <div class="info-bottom">
+            <div class="info-pictures"></div>
+            <div class="info-pictures"></div>
+            <div class="info-pictures"></div>
+            <div class="info-pictures"></div>
+        </div>
+    </div>
+    <div class="quote"></div>
+    <div class="sign-up-container">
+        <div class="sign-up"></div>
+    </div>
+    <footer></footer>
     
 </body>
 </html>
