--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo"></div>
+        <div class="logo-container">
+            <div class="logo">Header Logo</div>
+        </div>
         <div class="header-link-container">
-            <ul>
+            <ul class="list">
                 <li><a href="">header link one</a></li>
                 <li><a href="">header link two</a></li>
                 <li><a href="">header link three</a></li>
