left side of hero done

--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
         </div>
     </div>
     <div class="hero-container">
-        <div class="left-hero"></div>
+        <div class="left-hero">
+            <div class="left-hero-container">
+                <div class="hero-strong-text">This website is awesome</div>
+                <div class="hero-text">This website has some subtext that goes here under the main title. its a smaller font and the color is lower contrast</div>
+                <button class="hero-signup-button">Sign up</button>
+            </div>
+            
+        </div>
         <div class="right-hero"></div>
     </div>
     <div class="information-container">
