--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             </div>
             
         </div>
-        <div class="right-hero"></div>
+        <div class="right-hero">
+            <div class="right-hero-picture"></div>
+        </div>
     </div>
     <div class="information-container">
         <div class="info-top">Some random information</div>
