--- a/index.html
+++ b/index.html
@@ -39,11 +39,23 @@
     </div>
     <div class="information-container">
         <div class="info-top">Some random information</div>
-        <div class="info-bottom">
-            <div class="info-pictures"></div>
-            <div class="info-pictures"></div>
-            <div class="info-pictures"></div>
-            <div class="info-pictures"></div>
+        <div class="info-bottom-container">
+            <div class="card">
+                <div class="info-pictures"></div>
+                <div class="picture-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <div class="info-pictures"></div>
+                <div class="picture-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <div class="info-pictures"></div>
+                <div class="picture-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <div class="info-pictures"></div>
+                <div class="picture-text">this is some subtext under an illustration or image</div>
+            </div>
         </div>
     </div>
     <div class="quote"></div>
