sign up and footer done project done

--- a/index.html
+++ b/index.html
@@ -67,9 +67,14 @@
     </div>
     
     <div class="sign-up-container">
-        <div class="sign-up"></div>
+        <div class="sign-up-div">
+            <span class="span"><span class="inside-span">Call to action! Its time!</span><br> Sign up for our product by clicking that button right over there!</span>
+            <button class="sign-up-button">Sign up</button>
+        </div>
     </div>
-    <footer>Bora "Kahwe" Deniz Bas</footer>
+    <footer>
+        <div>Bora "Kahwe" Deniz Bas</div>
+    </footer>
     
 </body>
 </html>
